force-app/main/default/objects/Test_Project__c/Test_Project__c.object-meta.xml
<CustomObject>
    <label>Test Project</label>
    <nameField>
        <label>Test Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>