force-app/main/default/objects/Test_Project__c/fields/edit__c.field-meta.xml
<CustomField>
    <fullName>edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>edit</label>
    <type>Checkbox</type>
</CustomField>