force-app/main/default/objects/Test_Project__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>