force-app/main/default/objects/Test_Project__c/validationRules/Block_Status_Change_for_Not_Working.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Status_Change_for_Not_Working</fullName>
    <active>true</active>
    <errorConditionFormula>Active__c  &amp;&amp; ISPICKVAL( Project_Status__c , &apos;Not Working&apos;)</errorConditionFormula>
    <errorDisplayField>Project_Status__c</errorDisplayField>
    <errorMessage>Cannot set status to Not Working while active</errorMessage>
</ValidationRule>